# chuck-experiments

./: .gitignore  README.md  execute.ck
apps/: amen_hell.ck  amenbox.ck  clock_test.ck  flanger_fun.ck  gomidi2.ck  sndbuf_variable_rate.ck  theremin.ck  ugen_experiments.ck
instruments/: Amenbox.ck  Theremin.ck  init.ck
instruments/leapmotion-theremin/: pyproject.toml
ugens/: Abs.ck  ChopBuf.ck  Flanger.ck  Geq.ck  Gt.ck  Leq.ck  Lt.ck  Phaser.ck  Rhs.ck  SelfGate.ck  init.ck
utility/: IntRef.ck  MidiClock.ck  MidiUtil.ck  init.ck
